--- a/training_report.html
+++ b/training_report.html
@@ -35,25 +35,25 @@
 <div class="container">
 <h1>SLITHER.IO NEAT BOT - TRAINING ANALYSIS</h1>
 <p>File: training_stats.csv</p>
-<p>Total evaluations: 561</p>
+<p>Total evaluations: 563</p>
 <h3>OVERALL STATISTICS</h3>
-<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>Metric</th><th>Average</th><th>Max</th><th>Min</th></tr><tr><td>Fitness</td><td>3228.1</td><td>9507.7</td><td>273.0</td></tr><tr><td>Survival Time (s)</td><td>93.4</td><td>127.2</td><td>60.0</td></tr><tr><td>Food Eaten</td><td>27.1</td><td>47</td><td>2</td></tr><tr><td>Max Length</td><td>27.1</td><td>47</td><td>2</td></tr></table>
+<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>Metric</th><th>Average</th><th>Max</th><th>Min</th></tr><tr><td>Fitness</td><td>3224.5</td><td>9507.7</td><td>273.0</td></tr><tr><td>Survival Time (s)</td><td>93.3</td><td>127.2</td><td>60.0</td></tr><tr><td>Food Eaten</td><td>27.1</td><td>47</td><td>2</td></tr><tr><td>Max Length</td><td>27.1</td><td>47</td><td>2</td></tr></table>
 <h3>CAUSE OF DEATH</h3>
-<h4>Deaths by Cause</h4><div style='font-family: monospace;'><div style='margin: 5px 0;'><span style='display: inline-block; width: 120px;'>Starvation</span><span style='display: inline-block; width: 80px;'>433 (77.2%)</span><span style='display: inline-block; width: 200px; height: 20px; background-color: #4CAF50;'></span></div><div style='margin: 5px 0;'><span style='display: inline-block; width: 120px;'>Unknown</span><span style='display: inline-block; width: 80px;'>128 (22.8%)</span><span style='display: inline-block; width: 59px; height: 20px; background-color: #4CAF50;'></span></div></div>
+<h4>Deaths by Cause</h4><div style='font-family: monospace;'><div style='margin: 5px 0;'><span style='display: inline-block; width: 120px;'>Starvation</span><span style='display: inline-block; width: 80px;'>435 (77.3%)</span><span style='display: inline-block; width: 200px; height: 20px; background-color: #4CAF50;'></span></div><div style='margin: 5px 0;'><span style='display: inline-block; width: 120px;'>Unknown</span><span style='display: inline-block; width: 80px;'>128 (22.7%)</span><span style='display: inline-block; width: 58px; height: 20px; background-color: #4CAF50;'></span></div></div>
 <h3>RECENT PERFORMANCE (Last 100 vs First 100)</h3>
-<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>Metric</th><th>First 100</th><th>Last 100</th><th>Change</th></tr><tr><td>Avg Fitness</td><td>3291.3</td><td>3107.7</td><td>↓ -183.6</td></tr><tr><td>Avg Food</td><td>27.8</td><td>26.3</td><td>↓ -1.6</td></tr><tr><td>Avg Length</td><td>27.8</td><td>26.3</td><td>↓ -1.6</td></tr><tr><td>Avg Survival</td><td>93.9</td><td>91.9</td><td>↓ -2.1</td></tr></table>
+<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>Metric</th><th>First 100</th><th>Last 100</th><th>Change</th></tr><tr><td>Avg Fitness</td><td>3291.3</td><td>3103.0</td><td>↓ -188.4</td></tr><tr><td>Avg Food</td><td>27.8</td><td>26.2</td><td>↓ -1.6</td></tr><tr><td>Avg Length</td><td>27.8</td><td>26.2</td><td>↓ -1.6</td></tr><tr><td>Avg Survival</td><td>93.9</td><td>91.3</td><td>↓ -2.6</td></tr></table>
 <p>Bots that ate food: 100% → 100%</p>
 <h3>TOP 10 PERFORMERS</h3>
 <table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>#</th><th>GenomeID</th><th>Fitness</th><th>Time</th><th>Food</th><th>Len</th><th>Death</th></tr><tr><td>1</td><td>450</td><td>9507.7</td><td>120.0s</td><td>47</td><td>47</td><td>Unknown</td></tr><tr><td>2</td><td>4</td><td>8760.3</td><td>120.1s</td><td>42</td><td>42</td><td>Unknown</td></tr><tr><td>3</td><td>136</td><td>8065.8</td><td>121.0s</td><td>39</td><td>39</td><td>Unknown</td></tr><tr><td>4</td><td>432</td><td>7606.6</td><td>122.0s</td><td>36</td><td>36</td><td>Unknown</td></tr><tr><td>5</td><td>521</td><td>7516.7</td><td>120.0s</td><td>36</td><td>36</td><td>Unknown</td></tr><tr><td>6</td><td>52</td><td>7487.8</td><td>122.2s</td><td>36</td><td>36</td><td>Unknown</td></tr><tr><td>7</td><td>437</td><td>7266.4</td><td>120.0s</td><td>34</td><td>34</td><td>Unknown</td></tr><tr><td>8</td><td>220</td><td>6977.2</td><td>120.0s</td><td>33</td><td>33</td><td>Unknown</td></tr><tr><td>9</td><td>19</td><td>6819.1</td><td>126.2s</td><td>32</td><td>32</td><td>Unknown</td></tr><tr><td>10</td><td>17</td><td>6818.5</td><td>124.8s</td><td>32</td><td>32</td><td>Unknown</td></tr></table>
 <h3>LEARNING ASSESSMENT</h3>
 <p>Improvement (2nd half vs 1st half):</p>
-<p>✗ Fitness:  -69.2 (NO IMPROVEMENT)</p>
+<p>✗ Fitness:  -69.8 (NO IMPROVEMENT)</p>
 <p>✗ Food:     -0.9 (NOT LEARNING TO EAT!)</p>
 <br>
 <p>Recommendations:</p>
 <p>⚠ No fitness improvement - Consider restarting with fresh population</p>
 <br>
-<p>Analysis completed at 2026-02-04 09:19:03</p>
+<p>Analysis completed at 2026-02-04 09:20:05</p>
 <div class="chart-container">
     <canvas id="chart0"></canvas>
 </div>
@@ -61,10 +61,10 @@
 new Chart(document.getElementById('chart0'), {
     type: 'line',
     data: {
-        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50],
+        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51],
         datasets: [{
             label: 'Fitness Progress',
-            data: [np.float64(3605.1), np.float64(3556.7), np.float64(3689.1), np.float64(3030.4), np.float64(3219.8), np.float64(2740.4), np.float64(3049.0), np.float64(3053.0), np.float64(3376.3), np.float64(4065.5), np.float64(3664.4), np.float64(4034.8), np.float64(3322.0), np.float64(2897.3), np.float64(3339.4), np.float64(3046.6), np.float64(4350.2), np.float64(2791.4), np.float64(3119.0), np.float64(3134.9), np.float64(2472.0), np.float64(3736.6), np.float64(2749.4), np.float64(2642.9), np.float64(3348.0), np.float64(2987.5), np.float64(3107.5), np.float64(2771.7), np.float64(3032.9), np.float64(3425.2), np.float64(2313.6), np.float64(3036.1), np.float64(4356.2), np.float64(2836.5), np.float64(3147.1), np.float64(2694.9), np.float64(3356.4), np.float64(2775.6), np.float64(3628.9), np.float64(3440.9), np.float64(3384.3), np.float64(4272.2), np.float64(3844.1), np.float64(2654.2), np.float64(3066.0), np.float64(2365.3), np.float64(3327.4), np.float64(3061.1), np.float64(3697.8), np.float64(3133.5), np.float64(2881.5)],
+            data: [np.float64(3605.1), np.float64(3556.7), np.float64(3689.1), np.float64(3030.4), np.float64(3219.8), np.float64(2740.4), np.float64(3049.0), np.float64(3053.0), np.float64(3376.3), np.float64(4065.5), np.float64(3664.4), np.float64(4034.8), np.float64(3322.0), np.float64(2897.3), np.float64(3339.4), np.float64(3046.6), np.float64(4350.2), np.float64(2791.4), np.float64(3119.0), np.float64(3134.9), np.float64(2472.0), np.float64(3736.6), np.float64(2749.4), np.float64(2642.9), np.float64(3348.0), np.float64(2987.5), np.float64(3107.5), np.float64(2771.7), np.float64(3032.9), np.float64(3425.2), np.float64(2313.6), np.float64(3036.1), np.float64(4356.2), np.float64(2836.5), np.float64(3147.1), np.float64(2694.9), np.float64(3356.4), np.float64(2775.6), np.float64(3628.9), np.float64(3440.9), np.float64(3384.3), np.float64(4272.2), np.float64(3844.1), np.float64(2654.2), np.float64(3066.0), np.float64(2365.3), np.float64(3327.4), np.float64(3061.1), np.float64(3697.8), np.float64(3133.5), np.float64(2881.5), np.float64(2229.0)],
             borderColor: '#2196F3',
             backgroundColor: '#2196F322',
             fill: true,
@@ -95,10 +95,10 @@ new Chart(document.getElementById('chart0'), {
 new Chart(document.getElementById('chart1'), {
     type: 'line',
     data: {
-        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50],
+        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51],
         datasets: [{
             label: 'Food Eaten Progress',
-            data: [np.float64(28.2), np.float64(28.1), np.float64(27.1), np.float64(27.1), np.float64(28.0), np.float64(27.1), np.float64(26.9), np.float64(27.3), np.float64(30.5), np.float64(27.4), np.float64(27.6), np.float64(27.3), np.float64(26.8), np.float64(28.0), np.float64(27.0), np.float64(27.0), np.float64(27.7), np.float64(27.7), np.float64(27.9), np.float64(27.9), np.float64(27.9), np.float64(27.5), np.float64(27.3), np.float64(26.5), np.float64(27.0), np.float64(26.7), np.float64(27.4), np.float64(27.3), np.float64(26.6), np.float64(27.3), np.float64(22.1), np.float64(27.2), np.float64(27.6), np.float64(28.0), np.float64(24.5), np.float64(27.0), np.float64(27.2), np.float64(27.4), np.float64(26.9), np.float64(27.5), np.float64(27.0), np.float64(28.5), np.float64(28.1), np.float64(24.2), np.float64(27.2), np.float64(19.6), np.float64(26.7), np.float64(27.3), np.float64(27.3), np.float64(28.0), np.float64(28.0)],
+            data: [np.float64(28.2), np.float64(28.1), np.float64(27.1), np.float64(27.1), np.float64(28.0), np.float64(27.1), np.float64(26.9), np.float64(27.3), np.float64(30.5), np.float64(27.4), np.float64(27.6), np.float64(27.3), np.float64(26.8), np.float64(28.0), np.float64(27.0), np.float64(27.0), np.float64(27.7), np.float64(27.7), np.float64(27.9), np.float64(27.9), np.float64(27.9), np.float64(27.5), np.float64(27.3), np.float64(26.5), np.float64(27.0), np.float64(26.7), np.float64(27.4), np.float64(27.3), np.float64(26.6), np.float64(27.3), np.float64(22.1), np.float64(27.2), np.float64(27.6), np.float64(28.0), np.float64(24.5), np.float64(27.0), np.float64(27.2), np.float64(27.4), np.float64(26.9), np.float64(27.5), np.float64(27.0), np.float64(28.5), np.float64(28.1), np.float64(24.2), np.float64(27.2), np.float64(19.6), np.float64(26.7), np.float64(27.3), np.float64(27.3), np.float64(28.0), np.float64(28.0), np.float64(25.5)],
             borderColor: '#4CAF50',
             backgroundColor: '#4CAF5022',
             fill: true,
@@ -129,10 +129,10 @@ new Chart(document.getElementById('chart1'), {
 new Chart(document.getElementById('chart2'), {
     type: 'line',
     data: {
-        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50],
+        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51],
         datasets: [{
             label: 'Snake Length Progress',
-            data: [np.float64(28.2), np.float64(28.1), np.float64(27.1), np.float64(27.1), np.float64(28.0), np.float64(27.1), np.float64(26.9), np.float64(27.3), np.float64(30.5), np.float64(27.4), np.float64(27.6), np.float64(27.3), np.float64(26.8), np.float64(28.0), np.float64(27.0), np.float64(27.0), np.float64(27.7), np.float64(27.7), np.float64(27.9), np.float64(27.9), np.float64(27.9), np.float64(27.5), np.float64(27.3), np.float64(26.5), np.float64(27.0), np.float64(26.7), np.float64(27.4), np.float64(27.3), np.float64(26.6), np.float64(27.3), np.float64(22.1), np.float64(27.2), np.float64(27.6), np.float64(28.0), np.float64(24.5), np.float64(27.0), np.float64(27.2), np.float64(27.4), np.float64(26.9), np.float64(27.5), np.float64(27.0), np.float64(28.5), np.float64(28.1), np.float64(24.2), np.float64(27.2), np.float64(19.6), np.float64(26.7), np.float64(27.3), np.float64(27.3), np.float64(28.0), np.float64(28.0)],
+            data: [np.float64(28.2), np.float64(28.1), np.float64(27.1), np.float64(27.1), np.float64(28.0), np.float64(27.1), np.float64(26.9), np.float64(27.3), np.float64(30.5), np.float64(27.4), np.float64(27.6), np.float64(27.3), np.float64(26.8), np.float64(28.0), np.float64(27.0), np.float64(27.0), np.float64(27.7), np.float64(27.7), np.float64(27.9), np.float64(27.9), np.float64(27.9), np.float64(27.5), np.float64(27.3), np.float64(26.5), np.float64(27.0), np.float64(26.7), np.float64(27.4), np.float64(27.3), np.float64(26.6), np.float64(27.3), np.float64(22.1), np.float64(27.2), np.float64(27.6), np.float64(28.0), np.float64(24.5), np.float64(27.0), np.float64(27.2), np.float64(27.4), np.float64(26.9), np.float64(27.5), np.float64(27.0), np.float64(28.5), np.float64(28.1), np.float64(24.2), np.float64(27.2), np.float64(19.6), np.float64(26.7), np.float64(27.3), np.float64(27.3), np.float64(28.0), np.float64(28.0), np.float64(25.5)],
             borderColor: '#FF9800',
             backgroundColor: '#FF980022',
             fill: true,
@@ -156,7 +156,7 @@ new Chart(document.getElementById('chart2'), {
 });
 </script>
 
-<p class="timestamp">Report generated: 2026-02-04 09:19:03</p>
+<p class="timestamp">Report generated: 2026-02-04 09:20:05</p>
 </div>
 </body>
 </html>
